--- a/index.html
+++ b/index.html
@@ -36,7 +36,23 @@
                 </div>
             </div>
         </div>
-        <div class="winTable">Table</div>
+        <div class="winTable">
+            <div class="table">
+                <div class="scoreTable">Score table</div>
+                <div class="players">
+                    <div class="playerScore">Player
+                        <ul class="playerScoreList"></ul>
+                    </div>
+                    <div class="cpuScore">CPU
+                        <ul class="cpuScoreList"></ul>
+                    </div>
+                </div>
+                <div class="totalScore">Total points :
+                    <div class="playerAllScore"></div>
+                    <div class="cpuAllScore"></div>
+                </div>
+            </div>
+        </div>
         <div class="result">
             <div class="resultBorder">
                 <div class="matchScore">
@@ -45,13 +61,23 @@
                     <div class="cpuChoice"></div>
                  </div>
                  <div class="score"></div>
+                 <div class="nextRound">
+                     <div>
+                        NEXT ROUND
+                     </div>
+                    </div>
                 </div>
+              
             </div>
         </div>
     </conteiner>
-    <div class="newGame">New Game</div>
     </section>
-    <footer>by t0ldi89</footer>
+    <footer>Łukasz Stefański &copy 2019 
+        <div>
+            <a href="https://www.linkedin.com/in/łukasz-stefański-11571219a"><i class="fab fa-linkedin"></i></a>
+             <a href="https://github.com/t0ldi89"><i class="fab fa-github-square"></i></a>
+        </div>
+    </footer>
     <script src="app.js"></script>
 </body>
 </html>
